add left room